# mydjango

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
01_IntroductionToWebFrameworks/: simple_http_server.py
01_IntroductionToWebFrameworks/todo/: db.sqlite3
01_IntroductionToWebFrameworks/todo/tasks/: views.py
03_RequestsHandlingInDjango/board/: request_info
03_RequestsHandlingInDjango/board/advertisement/: admin.py  apps.py  forms.py  urls.py  views.py
03_RequestsHandlingInDjango/board/board/: settings.py  urls.py
04_DatabasesAndModels/board/advertisements_app/: admin.py  models.py  urls.py  views.py
04_DatabasesAndModels/board/board/: settings.py
05_Forms/news/app_news/: admin.py  forms.py  models.py  views.py
05_Forms/news/news/: settings.py  urls.py
06_AdminInterface/app_library/: admin.py  models.py
06_AdminInterface/app_library/migrations/: 0001_initial.py  0002_author.py  0003_book.py  0004_author_city_author_country_author_facebook_and_more.py
06_AdminInterface/restaurants/: settings.py
07_DjangoAuthentication/app_employment/: apps.py
07_DjangoAuthentication/app_users/: forms.py  views.py
07_DjangoAuthentication/app_users/templates/: main.html
07_DjangoAuthentication/djauth/: settings.py  urls.py
08_RegistrationAndAuthorization/djregistration/: requirement.txt
08_RegistrationAndAuthorization/djregistration/app_users/: admin.py  forms.py  models.py  tests.py  views.py
10_Testing/djtesting/app_users/: tests.py  views.py
M_13_DRF/: demo.py  requirements.txt
M_13_DRF/mysite/: requirement.txt
(+80 files in other folders)
