[tool.poetry]
name = "djangoa-app"
version = "0.1.0"
description = ""
authors = ["banrj <eh.ehr@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.6"
djangorestframework ="3.14.0"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
gunicorn = "^21.2.0"
pillow = "9.5.0"
drf-spectacular = "0.26.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
